--- a/XYZReader/src/main/res/values/strings.xml
+++ b/XYZReader/src/main/res/values/strings.xml
@@ -1,12 +1,8 @@
 <resources>
-
     <string name="app_name">XYZ Reader</string>
-    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>
-
-    <string name="action_refresh">Refresh</string>
-    <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
-
-    <string name="up">Up</string>
-
+    <string name="photo_transition">photoTransition</string>
+    <string name="photo_tag">photoTag</string>
+    <string name="share_text">Check out this article by downloading the XYZReader app on the Play Store:\n</string>
+    <string name="share_snack_text">Sharing is caring!</string>
 </resources>
